feat: 新增清理缓存的定时任务

--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -258,7 +258,12 @@
                     series: [
                         {
                             name: '距离',
+                            label: {
+                                show: true,  // 显示标签
+                                position: 'top',
+                            },
                             type: 'bar',
+                            barWidth: '64%',
                             data: myTotalData.distanceData
                         },
                         {
